# clawbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  docker.yml  release.yml
config/: clawbox.toml
crates/clawbox/: Cargo.toml  README.md
crates/clawbox-containers/: Cargo.toml  LICENSE  README.md
crates/clawbox-containers/src/: auth.rs  backend.rs  config.rs  error.rs  lib.rs  lifecycle.rs  manager.rs  orchestrator.rs  reaper.rs
crates/clawbox-proxy/: Cargo.toml  README.md
crates/clawbox-proxy/src/: allowlist.rs  audit.rs  credentials.rs  leak_detection.rs  lib.rs  proxy.rs  rate_limiter.rs  sanitizer_patterns.rs  scanner.rs  store.rs
crates/clawbox-sandbox/: Cargo.toml  README.md
crates/clawbox-sandbox/src/: engine.rs  host_functions.rs  lib.rs  resource_limits.rs  watcher.rs
crates/clawbox-server/: Cargo.toml  README.md
crates/clawbox-server/src/: auth.rs  config.rs  container_proxy.rs  lib.rs  metrics.rs  proxy_handler.rs  state.rs
crates/clawbox-server/src/routes/: agents.rs  containers.rs  execute.rs  health.rs  metrics.rs  mod.rs  tools.rs
crates/clawbox-server/tests/: auth_test.rs  container_test.rs  e2e_test.rs  observability_test.rs  server_test.rs
crates/clawbox-types/: Cargo.toml  README.md
crates/clawbox-types/src/: agent.rs  api.rs  host.rs  lib.rs  manifest.rs  patterns.rs  policy.rs
crates/clawbox/src/: build.rs  helpers.rs  main.rs  mcp.rs  scaffold.rs
docs/: api.md  writing-tools.md
images/: build.sh
images/agent-base/: Dockerfile  README.md
tools/: README.md  build-all.sh
tools/examples/js/base64/: index.js
tools/examples/js/echo/: echo.js
tools/examples/js/hash/: index.js
tools/examples/js/json-fmt/: index.js
tools/examples/rust/echo/: Cargo.toml  manifest.json
tools/examples/rust/echo/src/: main.rs
tools/examples/rust/github/: Cargo.toml  manifest.json
tools/examples/rust/github/src/: main.rs
tools/examples/rust/http-request/: Cargo.toml  manifest.json
tools/examples/rust/http-request/src/: main.rs
tools/examples/rust/web-fetch/: Cargo.toml  manifest.json
tools/examples/rust/web-fetch/src/: main.rs
tools/examples/rust/web-search/: Cargo.toml  manifest.json
tools/examples/rust/web-search/src/: main.rs
tools/examples/ts/echo/: build.sh  echo.ts
