[package]
name = "clawbox-server"
description = "HTTP API server for the clawbox sandboxed agent execution service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["server", "api", "sandbox", "agent", "axum"]
categories = ["web-programming::http-server", "development-tools"]
readme = "README.md"

[features]
default = ["docker"]
docker = ["dep:clawbox-containers"]

[dependencies]
clawbox-types = { path = "../clawbox-types", version = "0.1.0" }
clawbox-sandbox = { path = "../clawbox-sandbox", version = "0.1.0" }
clawbox-containers = { path = "../clawbox-containers", version = "0.1.0", optional = true }
clawbox-proxy = { path = "../clawbox-proxy", version = "0.1.0" }
reqwest = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
serial_test = "3"
bollard = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
